--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
     <div id="cart-dropdown" class="cart-dropdown">
         <h3>Din kundvagn</h3>
         <div id="cart-items"></div>
-        <button class="checkout-btn" onclick="window.location.href='checkout.html'">Gå till kassan</button>
+        <button class="checkout-btn" onclick="window.location.href='checkout.php'">Gå till kassan</button>
     </div>
 
     <main>
