--- a/login.html
+++ b/login.html
@@ -16,10 +16,16 @@
     <nav>
       <a class="menu-link" href="shop.php">Produkter</a>
       <a class="menu-link" href="contact.html">Kontakt</a>
-      <a class="link-on-page" href="profile.html">Profil</a>
+      <a class="link-on-page" href="profile.php">Profil</a>
       <button id="cart-icon" class="menu-link">🛒 <span id="cart-count">(0)</span></button>
     </nav>
   </header>
+
+  <section id="cart-dropdown" class="cart-dropdown">
+    <h3>Din kundvagn</h3>
+    <section id="cart-items"></section>
+    <button class="checkout-btn" onclick="window.location.href='checkout.php'">Gå till kassan</button>
+  </section>
 
   <main>
     <section id="login-section">
