--- a/product.html
+++ b/product.html
@@ -17,16 +17,16 @@
     <nav>
       <a class="link-on-page" href="shop.html">Produkter</a>
       <a class="menu-link" href="contact.html">Kontakt</a>
-      <a class="menu-link" href="profile.html">Profil</a>
+      <a class="menu-link" href="profile.php">Profil</a>
       <button id="cart-icon" class="menu-link">🛒 <span id="cart-count">(0)</span></button>
     </nav>
   </header>
 
-<div id="cart-dropdown" class="cart-dropdown">
-  <h3>Din kundvagn</h3>
-  <div id="cart-items"></div>
-  <button class="checkout-btn" onclick="window.location.href='checkout.html'">Gå till kassan</button>
-</div>
+  <section id="cart-dropdown" class="cart-dropdown">
+    <h3>Din kundvagn</h3>
+    <section id="cart-items"></section>
+    <button class="checkout-btn" onclick="window.location.href='checkout.php'">Gå till kassan</button>
+  </section>
 
 <main class="product-page">
   <a href="shop.php" class="back-button">← Tillbaka till butiken</a>
