--- a/shop.html
+++ b/shop.html
@@ -16,7 +16,7 @@
     <nav>
       <a class="link-on-page" href="shop.php">Produkter</a>
       <a class="menu-link" href="contact.html">Kontakt</a>
-      <a class="menu-link" href="profile.html">Profil</a>
+      <a class="menu-link" href="profile.php">Profil</a>
       <button id="cart-icon" class="menu-link">🛒 <span id="cart-count">(0)</span></button>
     </nav>
   </header>
@@ -24,7 +24,7 @@
   <section id="cart-dropdown" class="cart-dropdown">
     <h3>Din kundvagn</h3>
     <section id="cart-items"></section>
-    <button class="checkout-btn" onclick="window.location.href='checkout.html'">Gå till kassan</button>
+    <button class="checkout-btn" onclick="window.location.href='checkout.php'">Gå till kassan</button>
   </section>
 
   <main>
