--- a/checkout.html
+++ b/checkout.html
@@ -22,6 +22,7 @@
     </header>
 
     <section id="cart-dropdown" class="cart-dropdown">
+        <span class="close-btn" onclick="closeCart()">&#10005;</span>
         <h3>Din kundvagn</h3>
         <section id="cart-items"></section>
         <button class="checkout-btn" onclick="window.location.href='checkout.php'">Gå till kassan</button>
