--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,12 @@
             </nav>
         </header>
 
-        <div id="cart-dropdown" class="cart-dropdown">
+        <section id="cart-dropdown" class="cart-dropdown">
+            <span class="close-btn" onclick="closeCart()">&#10005;</span>
             <h3>Din kundvagn</h3>
-            <div id="cart-items"></div>
-            <button class="checkout-btn" onclick="window.location.href='checkout.html'">Gå till kassan</button>
-        </div>
+            <section id="cart-items"></section>
+            <button class="checkout-btn" onclick="window.location.href='checkout.php'">Gå till kassan</button>
+        </section>
 
         <main>
                 <p class="slogan-subtext">Din grönaste växtbutik på nätet</p>
