--- a/register.html
+++ b/register.html
@@ -20,11 +20,12 @@
     </nav>
   </header>
 
-    <div id="cart-dropdown" class="cart-dropdown">
-        <h3>Din kundvagn</h3>
-        <div id="cart-items"></div>
-        <button class="checkout-btn" onclick="window.location.href='checkout.php'">Gå till kassan</button>
-    </div>
+  <section id="cart-dropdown" class="cart-dropdown">
+    <span class="close-btn" onclick="closeCart()">&#10005;</span>
+    <h3>Din kundvagn</h3>
+    <section id="cart-items"></section>
+    <button class="checkout-btn" onclick="window.location.href='checkout.php'">Gå till kassan</button>
+  </section>
 
     <main>
         <p class="slogan-subtext">Din grönaste växtbutik på nätet</p>
