feat: add to cart-button for product page

--- a/product.html
+++ b/product.html
@@ -32,7 +32,9 @@
 <main class="product-page">
   <a href="shop.php" class="back-button">← Tillbaka till butiken</a>
   {{product-detail}}
+  </br>
 </main>
 
+<script src="script.js"></script>
 </body>
 </html>
