style: responsive nav-menu for small screens (hamburger menu)

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
         
         <header>
             <h1 class="logo">Elm</h1>
+            <button id="hamburger" class="hamburger">&#9776;</button>
             <nav>
               <a class="menu-link" href="shop.php">Produkter</a>
               <a class="link-on-page" href="contact.html">Kontakt</a>
