--- a/product.html
+++ b/product.html
@@ -14,6 +14,7 @@
   
   <header>
     <h1 class="logo">Elm</h1>
+    <button id="hamburger" class="hamburger">&#9776;</button>
     <nav>
       <a class="link-on-page" href="shop.html">Produkter</a>
       <a class="menu-link" href="contact.html">Kontakt</a>
