--- a/shop.html
+++ b/shop.html
@@ -13,12 +13,14 @@
 
   <header>
     <h1 class="logo">Elm</h1>
+    <button id="hamburger" class="hamburger">&#9776;</button>
     <nav>
       <a class="link-on-page" href="shop.php">Produkter</a>
       <a class="menu-link" href="contact.html">Kontakt</a>
       <a class="menu-link" href="profile.php">Profil</a>
       <button id="cart-icon" class="menu-link">🛒 <span id="cart-count">(0)</span></button>
     </nav>
+    
   </header>
 
   <section id="cart-dropdown" class="cart-dropdown">
