--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
   
   <header>
     <h1 class="logo">Elm</h1>
+    <button id="hamburger" class="hamburger">&#9776;</button>
     <nav>
       <a class="menu-link" href="shop.php">Produkter</a>
       <a class="menu-link" href="contact.html">Kontakt</a>
