--- a/checkout.html
+++ b/checkout.html
@@ -1,54 +1,56 @@
+<!-- /src/checkout.html -->
 <!DOCTYPE html>
 <html lang="sv">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Checkout</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap"rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&display=swap"rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@400&display=swap"rel="stylesheet"/>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Checkout</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@400&display=swap" rel="stylesheet" />
 
-    <header>
-      <h1 class="logo">Elm</h1>
-      <button id="hamburger" class="hamburger">&#9776;</button>
-      <nav>
-        <a class="menu-link" href="shop.php">Produkter</a>
-        <a class="menu-link" href="contact.html">Kontakt</a>
-        <a class="menu-link" href="profile.php">Profil</a>
-        <button id="cart-icon" class="link-on-page">🛒 <span id="cart-count">(0)</span></button>
-      </nav>
-    </header>
+  <header>
+    <h1 class="logo">Elm</h1>
+    <button id="hamburger" class="hamburger">&#9776;</button>
+    <nav>
+      <a class="menu-link" href="shop.php">Produkter</a>
+      <a class="menu-link" href="contact.html">Kontakt</a>
+      <a class="menu-link" href="profile.php">Profil</a>
+      <button id="cart-icon" class="link-on-page">🛒 <span id="cart-count">(0)</span></button>
+    </nav>
+  </header>
 
-    <section id="cart-dropdown" class="cart-dropdown">
-        <span class="close-btn" onclick="closeCart()">&#10005;</span>
-        <h3>Din kundvagn</h3>
-        <section id="cart-items"></section>
-        <button class="checkout-btn" onclick="window.location.href='checkout.php'">Gå till kassan</button>
-      </section>
+  <section id="cart-dropdown" class="cart-dropdown">
+    <span class="close-btn" data-action="close-cart">&#10005;</span>
+    <h3>Din kundvagn</h3>
+    <section id="cart-items"></section>
+    <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
+  </section>
 
-    <main>
-      <p class="slogan-subtext">Din grönaste växtbutik på nätet</p>
-      <hr class="slogan-line" />
-      <a href="shop.php" class="back-button">← Fortsätt handla</a>
+  <main>
+    <p class="slogan-subtext">Din grönaste växtbutik på nätet</p>
+    <hr class="slogan-line" />
+    <a href="shop.php" class="back-button">← Fortsätt handla</a>
 
-      <h1>Slutför ditt köp</h1>
+    <h1>Slutför ditt köp</h1>
 
+    <article id="cart-container">
+      {{cart-items}}
+    </article>
 
-      <article id="cart-container">
-        {{cart-items}}
-      </article>
+    <h2>Leveransuppgifter</h2>
+    {{error-message}}
+    <form method="POST" action="place_order.php" id="checkout-form">
+      <input type="text" name="name" placeholder="Namn" required /><br /><br />
+      <input type="text" name="address" placeholder="Adress" required /><br /><br />
+      <input type="email" name="email" placeholder="E-post" required /><br /><br />
+      <button type="submit">Slutför köp</button>
+    </form>
+  </main>
 
-      <h2>Leveransuppgifter</h2>
-      {{error-message}}
-      <form method="POST" action="place_order.php" id="checkout-form">
-        <input type="text" name="name" placeholder="Namn" required /><br /><br />
-        <input type="text" name="address" placeholder="Adress" required /><br /><br />
-        <input type="email" name="email" placeholder="E-post" required /><br /><br />
-        <button type="submit">Slutför köp</button>
-      </form>
-    </main>
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
