--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+<!-- /src/login.html -->
 <!DOCTYPE html>
 <html lang="sv">
 <head>
@@ -10,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@400&display=swap" rel="stylesheet">
-  
+
   <header>
     <h1 class="logo">Elm</h1>
     <button id="hamburger" class="hamburger">&#9776;</button>
@@ -23,16 +24,16 @@
   </header>
 
   <section id="cart-dropdown" class="cart-dropdown">
-    <span class="close-btn" onclick="closeCart()">&#10005;</span>
+    <span class="close-btn" data-action="close-cart">&#10005;</span>
     <h3>Din kundvagn</h3>
     <section id="cart-items"></section>
-    <button class="checkout-btn" onclick="window.location.href='checkout.php'">Gå till kassan</button>
+    <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
   </section>
 
   <main>
     <section id="login-section">
       <h2>Inloggning</h2>
-      <form id="login-form" method="POST">
+      <form method="POST" action="login.php">
         <label for="login-email">E-post</label>
         <input type="email" id="login-email" name="email" required>
 
@@ -42,7 +43,9 @@
         <button type="submit">Logga in</button>
       </form>
 
-      <p>Har du inget konto? <a href="register.html">Registrera dig här</a></p>
+      <p>Har du inget konto? <a href="register.php">Registrera dig här</a></p>
+
+      <p id="login-feedback">{{login-feedback}}</p>
     </section>
   </main>
 
