--- a/shop.html
+++ b/shop.html
@@ -1,8 +1,9 @@
+<!-- /src/shop.html -->
 <!DOCTYPE html>
 <html lang="sv">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Växtbutik</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -20,14 +21,13 @@
       <a class="menu-link" href="profile.php">Profil</a>
       <button id="cart-icon" class="menu-link">🛒 <span id="cart-count">(0)</span></button>
     </nav>
-    
   </header>
 
   <section id="cart-dropdown" class="cart-dropdown">
-    <span class="close-btn" onclick="closeCart()">&#10005;</span>
+    <span class="close-btn" data-action="close-cart">&#10005;</span>
     <h3>Din kundvagn</h3>
     <section id="cart-items"></section>
-    <button class="checkout-btn" onclick="window.location.href='checkout.php'">Gå till kassan</button>
+    <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
   </section>
 
   <main>
@@ -36,7 +36,7 @@
 
     <section id="filters">
       <button type="button" id="filter-toggle">Filtrera +</button>
-    
+
       <section id="filter-dropdown" class="hidden">
         <form method="get" action="shop.php">
           <fieldset>
