--- a/register.html
+++ b/register.html
@@ -1,4 +1,3 @@
-<!-- /src/register.html -->
 <!DOCTYPE html>
 <html lang="sv">
 <head>
@@ -35,12 +34,12 @@
 
     <h1>Skapa konto</h1>
 
-    <form id="register-form">
+    <form method="POST" action="register.php">
       <input type="text" name="name" placeholder="Namn" required><br>
       <input type="email" name="email" placeholder="E-post" required><br>
       <input type="password" name="password" placeholder="Lösenord" required><br>
       <button type="submit">Registrera</button>
-      <p>Har du redan ett konto? <a href="profile.php">Logga in här</a>.</p>
+      {{login-link}}
       <p id="feedback">{{feedback}}</p>
     </form>
   </main>
