--- a/checkout.html
+++ b/checkout.html
@@ -1,10 +1,9 @@
-<!-- /src/checkout.html -->
 <!DOCTYPE html>
 <html lang="sv">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Checkout</title>
+  <title>Checkout | Elm 🌿</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -23,14 +22,13 @@
     </nav>
   </header>
 
-  <section id="cart-dropdown" class="cart-dropdown">
-    <span class="close-btn" data-action="close-cart">&#10005;</span>
-    <h3>Din kundvagn</h3>
-    <section id="cart-items"></section>
-    <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
-  </section>
-
   <main>
+    <section id="cart-dropdown-checkout" class="cart-dropdown">
+      <span class="close-btn" data-action="close-cart">&#10005;</span>
+      <h3>Din kundvagn</h3>
+      <section id="cart-items"></section>
+    </section>
+
     <p class="slogan-subtext">Din grönaste växtbutik på nätet</p>
     <hr class="slogan-line" />
     <a href="shop.php" class="back-button">← Fortsätt handla</a>
