--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kontakt</title>
+        <title>Kontakt | Elm 🌿</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -22,18 +22,21 @@
             </nav>
         </header>
 
-        <section id="cart-dropdown" class="cart-dropdown">
-            <span class="close-btn" onclick="closeCart()">&#10005;</span>
-            <h3>Din kundvagn</h3>
-            <section id="cart-items"></section>
-            <button class="checkout-btn" onclick="window.location.href='checkout.php'">Gå till kassan</button>
-        </section>
-
         <main>
-                <p class="slogan-subtext">Din grönaste växtbutik på nätet</p>
-                <hr class="slogan-line">
+            <section id="cart-dropdown" class="cart-dropdown">
+                <span class="close-btn" data-action="close-cart">&#10005;</span>
+                <h3>Din kundvagn</h3>
+                <section id="cart-items"></section>
+                <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
+            </section>
+
+            <p class="slogan-subtext">Din grönaste växtbutik på nätet</p>
+            <hr class="slogan-line">
             <h1>Kontakt</h1>
+            <h3 id="contact-header">Kontakta oss på:</h3>
+            <p id="contact-p">elm-vaxter@mail.com</p>
         </main>
+
     <script src="script.js"></script>
     </body>
 </html>
