--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Elm växtbutik</title>
+  <title>Startsida | Elm 🌿</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="landing">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@400&display=swap" rel="stylesheet">
 
   <main class="intro">
     <section class="overlay">
-      <h1 class="logo">Elm</h1>
+      <h1 class="logo-intro">Elm</h1>
       <p class="slogan">-för ett grönare hem.</p>
-      <a href="shop.php" class="proceed-btn">Gå till butiken→</a>
+      <a href="shop.php" class="proceed-btn">Handla nu→</a>
     </section>
   </main>
 
