--- a/login.html
+++ b/login.html
@@ -1,10 +1,9 @@
-<!-- /src/login.html -->
 <!DOCTYPE html>
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inloggning | Elm</title>
+  <title>Inloggning | Elm 🌿</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,14 +22,14 @@
     </nav>
   </header>
 
-  <section id="cart-dropdown" class="cart-dropdown">
-    <span class="close-btn" data-action="close-cart">&#10005;</span>
-    <h3>Din kundvagn</h3>
-    <section id="cart-items"></section>
-    <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
-  </section>
-
   <main>
+    <section id="cart-dropdown" class="cart-dropdown">
+      <span class="close-btn" data-action="close-cart">&#10005;</span>
+      <h3>Din kundvagn</h3>
+      <section id="cart-items"></section>
+      <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
+    </section>
+
     <section id="login-section">
       <h2>Inloggning</h2>
       <form method="POST" action="login.php">
