--- a/product.html
+++ b/product.html
@@ -1,10 +1,9 @@
-<!-- /src/product.html -->
 <!DOCTYPE html>
 <html lang="sv">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Produkt</title>
+  <title>Produktsida | Elm 🌿</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -16,21 +15,21 @@
     <h1 class="logo">Elm</h1>
     <button id="hamburger" class="hamburger">&#9776;</button>
     <nav>
-      <a class="menu-link" href="shop.php">Produkter</a>
+      <a class="link-on-page" href="shop.php">Produkter</a>
       <a class="menu-link" href="contact.html">Kontakt</a>
       <a class="menu-link" href="profile.php">Profil</a>
       <button id="cart-icon" class="menu-link">🛒 <span id="cart-count">(0)</span></button>
     </nav>
   </header>
 
-  <section id="cart-dropdown" class="cart-dropdown">
-    <span class="close-btn" data-action="close-cart">&#10005;</span>
-    <h3>Din kundvagn</h3>
-    <section id="cart-items"></section>
-    <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
-  </section>
-
   <main class="product-page">
+    <section id="cart-dropdown" class="cart-dropdown">
+      <span class="close-btn" data-action="close-cart">&#10005;</span>
+      <h3>Din kundvagn</h3>
+      <section id="cart-items"></section>
+      <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
+    </section>
+
     <a href="shop.php" class="back-button">← Tillbaka till butiken</a>
     {{product-detail}}
   </main>
