--- a/profile.html
+++ b/profile.html
@@ -1,9 +1,8 @@
-<!-- /src/profile.html -->
 <!DOCTYPE html>
 <html lang="sv">
 <head>
   <meta charset="UTF-8" />
-  <title>Profil</title>
+  <title>Profil | Elm 🌿</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -22,14 +21,14 @@
     </nav>
   </header>
 
-  <section id="cart-dropdown" class="cart-dropdown">
-    <span class="close-btn" data-action="close-cart">&#10005;</span>
-    <h3>Din kundvagn</h3>
-    <section id="cart-items"></section>
-    <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
-  </section>
-
   <main>
+    <section id="cart-dropdown" class="cart-dropdown">
+      <span class="close-btn" data-action="close-cart">&#10005;</span>
+      <h3>Din kundvagn</h3>
+      <section id="cart-items"></section>
+      <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
+    </section>
+
     <p class="slogan-subtext">Din grönaste växtbutik på nätet</p>
     <hr class="slogan-line" />
     <h1>Min profil</h1>
@@ -37,6 +36,7 @@
     {{profile-content}}
     {{order-modal}}
   </main>
+
   <script src="script.js"></script>
 </body>
 </html>
