--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
-  <title>Registrera konto</title>
+  <title>Registrera konto | Elm 🌿</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,14 +21,14 @@
     </nav>
   </header>
 
-  <section id="cart-dropdown" class="cart-dropdown">
-    <span class="close-btn" data-action="close-cart">&#10005;</span>
-    <h3>Din kundvagn</h3>
-    <section id="cart-items"></section>
-    <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
-  </section>
-
   <main>
+    <section id="cart-dropdown" class="cart-dropdown">
+      <span class="close-btn" data-action="close-cart">&#10005;</span>
+      <h3>Din kundvagn</h3>
+      <section id="cart-items"></section>
+      <button class="checkout-btn" data-action="go-checkout">Gå till kassan</button>
+    </section>
+
     <p class="slogan-subtext">Din grönaste växtbutik på nätet</p>
     <hr class="slogan-line">
 
