refactor: extract product view HTML to templates and remove inline HTML in product.php

--- a/login.html
+++ b/login.html
@@ -44,7 +44,9 @@
 
       <p>Har du inget konto?<a href="register.php"> Registrera dig här</a></p>
 
-      <p id="login-feedback">{{login-feedback}}</p>
+      <p id="login-feedback">
+        {{login-feedback}}
+      </p>
     </section>
   </main>
 
