--- a/checkout.html
+++ b/checkout.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Checkout | Elm 🌿</title>
   <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
+
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@400&display=swap" rel="stylesheet" />
+</head>
+<body>
 
   <header>
     <h1 class="logo">Elm</h1>
@@ -23,10 +24,11 @@
   </header>
 
   <main>
-    <section id="cart-dropdown-checkout" class="cart-dropdown">
+    <section id="cart-dropdown" class="cart-dropdown">
       <span class="close-btn" data-action="close-cart">&#10005;</span>
       <h3>Din kundvagn</h3>
       <section id="cart-items"></section>
+      <button class="checkout-btn" data-action="go-checkout">Uppdatera kundvagn</button>
     </section>
 
     <p class="slogan-subtext">Din grönaste växtbutik på nätet</p>
